k8s/backend.yml
# goapp deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - name: goapp
        image: kubesami/backend:b0b5da8e14d30787bb4a3267cd801cc5c7aac93a
        ports:
        - containerPort: 8080
---
# goapp service
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
spec:
  selector:
    app: goapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
