k8s/frontend.yml
# nextapp deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextapp
  template:
    metadata:
      labels:
        app: nextapp
    spec:
      containers:
      - name: nextapp
        image: kubesami/frontend:75649495f353959f14dc3c63db838a5cd5ad9178
        ports:
        - containerPort: 3000
---
# nextapp service
apiVersion: v1
kind: Service
metadata:
  name: nextapp-service
spec:
  selector:
    app: nextapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
