k8s/httproutes-golang.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: chat-goapp
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "api.devopschat.xyz"
  rules:
  - matches:
    - path:
        value: /signup
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - path:
        value: /login
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - path:
        value: /logout
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /ws
    backendRefs:
    - name: goapp-service
      port: 8080
