k8s/httproutes.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: chat
spec:
  parentRefs:
  - kind: Gateway
    name: external-http
  hostnames:
  - "devopschat.xyz"
  - "api.devopschat.xyz"
  rules:
  - matches:
    - host:
        hostname: api.devopschat.xyz
      path:
        value: /signup
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - host:
        hostname: api.devopschat.xyz
      path:
        value: /login
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - host:
        hostname: api.devopschat.xyz
      path:
        value: /logout
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - host:
        hostname: api.devopschat.xyz
      path:
        type: PathPrefix
        value: /ws
    backendRefs:
    - name: goapp-service
      port: 8080
  - matches:
    - host:
        hostname: devopschat.xyz
    backendRefs:
    - name: nextapp-service
      port: 80
